--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>HY48 | Homepage</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon">
+    <link rel='stylesheet' type='text/css' media='screen' href='static/css/style.css'>
+</head>
+<body>
+    <div id="container">
+        <header class="landing-header">
+            <img class="avatar" id="avatar" src="/static/images/avatar.png" alt="an abstract avatar image">
+            <div> 
+                <h1>HY48</h1>
+                <h2><em>Personal Site</em></h2>
+            </div>
+        </header>
 
+        <main> 
+            <nav>
+                <a class="nav-element" href="/">Home</a>
+                <a class="nav-element" href="/about.html">About</a>
+                <a class="nav-element" href="/contact.html">Contact</a>
+            </nav>
+            <div class="link-collection">
+                <h2>Links of Interest</h2>
+                <a href="https://github.com/HY48">Github - Where I upload stuff</a>
+            </div>
+            <!-- Add some more stuff here, dunno what tho-->
+            <!-- <div class="text-collection"><h2>Some Text</h2></div> -->
+
+        </main>
+    </div>
+    <footer>"Made you look"</footer>
+</body>
+</html>
