--- a/index.html
+++ b/index.html
@@ -6,33 +6,98 @@
     <title>HY48 | Homepage</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon">
+    <link rel='stylesheet' type='text/css' media='screen' href='static/css/skeleton.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='static/css/normalize.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='static/css/style.css'>
 </head>
 <body>
-    <div id="container">
-        <header class="landing-header">
-            <img class="avatar" id="avatar" src="/static/images/avatar.png" alt="an abstract avatar image">
-            <div> 
-                <h1>HY48</h1>
-                <h2><em>Personal Site</em></h2>
+    <div class="container">
+        <div id="mobile-header" class="page-header">
+            <h2>HY48</h2>
+            <div class="nav-bar">
+                <div class="nav-bar-icons">
+                    <a href="mailto:martx977@gmail.com">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="link-button" viewBox="0 0 16 16">
+                            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                        </svg>
+                    </a>
+                    <a href="https://github.com/HY48">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="link-button" viewBox="0 0 16 16">
+                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                          </svg>
+                    </a>
+                </div>
             </div>
-        </header>
-
-        <main> 
-            <nav>
-                <a class="nav-element" href="/">Home</a>
-                <a class="nav-element" href="/about.html">About</a>
-                <a class="nav-element" href="/contact.html">Contact</a>
-            </nav>
-            <div class="link-collection">
-                <h2>Links of Interest</h2>
-                <a href="https://github.com/HY48">Github - Where I upload stuff</a>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="five columns side-img">
+                <img src="static/images/avatar.png" alt="abstract profile image">
             </div>
-            <!-- Add some more stuff here, dunno what tho-->
-            <!-- <div class="text-collection"><h2>Some Text</h2></div> -->
+            <div class="seven columns">
+                <div id="desktop-header" class="page-header">
+                    <h2>HY48</h2>
+                    <div class="nav-bar">
+                        <div class="nav-bar-icons">
+                            <a href="mailto:martx977@gmail.com">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                                </svg>
+                            </a>
+                            <a href="https://github.com/HY48">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <article>
+                    <h5>Who am I?</h5>
+                    <p id="who-am-i">
+                        <span>
+                            Hi, I'm Xavier, a 20 year old Undergraduate Student from Minnesota. 
+                        </span>
+                        <br>
+                        <span>
+                            I am currently enrolled at the <a href="https://cse.umn.edu/">University of 
+                            Minnesota (CSE) - Twin Cities</a> studying Computer Science with the intention of
+                            focusing on Systems Programming.
+                        </span>
+                        <br><br>
+                        <span>
+                            Most of what I write is in C, C++, and Rust, but I also occasionally 
+                            program in Python, Javascript, and OCaml (thank you 
+                            <a href="https://umtc.catalog.prod.coursedog.com/courses/8103471">CSCI 2041</a>).
+                        </span>
+                    </p>
+                    <h5>What is this?</h5>
+                    <p id="what-is-this">
+                        <span>
+                            My personal site—something I made that I can point towards when people ask 
+                            <a href="/">"who am I"</a> and <a href="/">"where can they find me."</a>
+                        </span>
+                        <br><br>
+                        <span>
+                            This site was built using basic html / css on top of the 
+                            <a href="http://getskeleton.com/">skeleton 'framework'</a>.
+                        </span>
+                        <br>
+                        <span>
+                            I intend to continue extending the functionality of the site - add a blog 
+                            (<a href="https://github.com/11ty/eleventy">eleventy?</a>), project showcase, 
+                            host it somewhere other than github pages, and slow it down with tons of javascript 
+                            (lol) - but for the moment, I'll keep it simple and barebones.
+                        </span>
+                    </p>
+                </article>
 
-        </main>
+            </div>
+        </div>
+        <div class="footer">
+            <hr>
+            Built with <a href="http://getskeleton.com/">Skeleton</a> | <a href="https://github.com/HY48/HY48.github.io">Source Code</a>
+        </div>
     </div>
-    <footer>"Made you look"</footer>
 </body>
 </html>
